ultima version sin draft

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -22,3 +22,23 @@ CreateOn=Create On
 DeliveryDate=Delivery Date
 OrderStatus=Order Status
 ImageUrl=Image
+
+#Items
+IdItem=Id
+Name=Name
+Description=Description
+ReleaseDate=Release Date
+DiscontinuedDate=Discontinued Date
+Price=Price
+Height=Height
+Width=Width
+Depth=Depth
+Quantity=Quantity
+UnitOfMeasure=UnitOfMeasure
+
+#Cabecerar de los grupos
+OrderInformation=Order Information
+ItemInformation=Item Information
+
+Header=Header
+Headers=Headers
